--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(database)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(database main.cpp CSVFile.cpp CSVFile.h)
+add_executable(database main.cpp libs/CSVFile/CSVFile.cpp libs/CSVFile/CSVFile.h libs/CLI/CLI.cpp libs/CLI/CLI.h)
