save the records in a vector of maps where the key is the col name and value is col value instead of vector of vector

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(database)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(database main.cpp libs/CSVFile/CSVFile.cpp libs/CSVFile/CSVFile.h libs/CLI/CLI.cpp libs/CLI/CLI.h libs/Database/Database.cpp libs/Database/Database.h libs/Table/Table.cpp libs/Table/Table.h libs/Utils/Pointer/Pointer.h libs/Utils/ID/Id.h libs/Utils/String/StringUtils.cpp libs/Utils/String/StringUtils.h)
+add_executable(database main.cpp libs/CSVFile/CSVFile.cpp libs/CSVFile/CSVFile.h libs/CLI/CLI.cpp libs/CLI/CLI.h libs/Database/Database.cpp libs/Database/Database.h libs/Table/Table.cpp libs/Table/Table.h libs/Utils/Pointer/Pointer.h libs/Utils/ID/Id.h libs/Utils/String/StringUtils.cpp libs/Utils/String/StringUtils.h libs/Utils/types/types.h)
