--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(database)
 
 set(CMAKE_CXX_STANDARD 23)
 
-add_executable(database main.cpp libs/CSVFile/CSVFile.cpp libs/CSVFile/CSVFile.h libs/CLI/CLI.cpp libs/CLI/CLI.h libs/Database/Database.cpp libs/Database/Database.h libs/Table/Table.cpp libs/Table/Table.h libs/Utils/Pointer/Pointer.h libs/Utils/ID/Id.h libs/Utils/String/StringUtils.cpp libs/Utils/String/StringUtils.h libs/Utils/types/types.h)
+add_executable(database main.cpp src/CSVFile/CSVFile.cpp src/CSVFile/CSVFile.h src/CLI/CLI.cpp src/CLI/CLI.h src/Database/Database.cpp src/Database/Database.h src/Table/Table.cpp src/Table/Table.h src/Utils/Pointer/Pointer.h src/Utils/ID/Id.h src/Utils/String/StringUtils.cpp src/Utils/String/StringUtils.h src/Utils/types/types.h)
