show basic windows

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,4 @@ set(CMAKE_CXX_STANDARD 23)
 add_compile_definitions(wxMSVC_VERSION_ABI_COMPAT WXUSINGDLL UNICODE _UNICODE)
 include_directories($ENV{WX_WID}/include/msvc $ENV{WX_WID}/include)
 link_directories($ENV{WX_WID}/lib/vc14x_x64_dll)
-add_executable(database WIN32 main.cpp src/CSVFile/CSVFile.cpp src/CSVFile/CSVFile.h src/CLI/CLI.cpp src/CLI/CLI.h src/Database/Database.cpp src/Database/Database.h src/Table/Table.cpp src/Table/Table.h src/Utils/Pointer/Pointer.h src/Utils/ID/Id.h src/Utils/String/StringUtils.cpp src/Utils/String/StringUtils.h src/Utils/types/types.h)
+add_executable(database WIN32 main.cpp src/CSVFile/CSVFile.cpp src/CSVFile/CSVFile.h src/CLI/CLI.cpp src/CLI/CLI.h src/Database/Database.cpp src/Database/Database.h src/Table/Table.cpp src/Table/Table.h src/Utils/Pointer/Pointer.h src/Utils/ID/Id.h src/Utils/String/StringUtils.cpp src/Utils/String/StringUtils.h src/Utils/types/types.h src/gui/App/App.cpp src/gui/App/App.h src/gui/Window/Window.cpp src/gui/Window/Window.h src/gui/inlcude.h)
